[gd_scene load_steps=2 format=3 uid="uid://dx82jmybygtnq"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_iugg8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_iugg8")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 14.175
anchor_top = 8.45
anchor_right = 14.175
anchor_bottom = 8.45
offset_left = -621.0
offset_top = -355.0
offset_right = 621.0
offset_bottom = 355.0
grow_horizontal = 0
color = Color(0.0156863, 0.00392157, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.25
anchor_top = 8.375
anchor_right = 14.25
anchor_bottom = 8.375
offset_left = -574.0
offset_top = -212.0
offset_right = 580.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="1P Mode" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "1P Mode"

[node name="2P Mode" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "2P Mode"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.537
anchor_top = 8.2
anchor_right = 14.537
anchor_bottom = 8.2
offset_left = -185.48
offset_top = -142.0
offset_right = 185.52
offset_bottom = -3.05176e-05
theme_override_font_sizes/font_size = 100
text = "PONG?!"

[connection signal="pressed" from="MarginContainer/VBoxContainer/1P Mode" to="." method="_on_p_mode_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/2P Mode" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
